--- a/RomRepoMgr/App.xaml
+++ b/RomRepoMgr/App.xaml
@@ -7,4 +7,11 @@
         <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml" />
         <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml" />
     </Application.Styles>
+    <NativeMenu.Menu>
+        <NativeMenu>
+            <NativeMenuItem Header="_About" Clicked="OnAboutClicked" />
+            <NativeMenuItem Header="_Preferences" Clicked="OnPreferencesClicked" />
+            <NativeMenuItem Header="_Quit" Clicked="OnQuitClicked" />
+        </NativeMenu>
+    </NativeMenu.Menu>
 </Application>
