--- a/RomRepoMgr/Views/About.xaml
+++ b/RomRepoMgr/Views/About.xaml
@@ -87,10 +87,16 @@
                     </TabItem.Header>
                     <DataGrid Items="{Binding Assemblies}" HorizontalScrollBarVisibility="Visible">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="{Binding AssembliesLibraryText}" Binding="{Binding Name}"
-                                                Width="Auto" IsReadOnly="True" />
-                            <DataGridTextColumn Header="{Binding AssembliesVersionText}" Binding="{Binding Version}"
-                                                Width="Auto" IsReadOnly="True" />
+                            <DataGridTextColumn Binding="{Binding Name}" Width="Auto" IsReadOnly="True">
+                                <DataGridTextColumn.Header>
+                                    <TextBlock Text="{Binding AssembliesLibraryText}" />
+                                </DataGridTextColumn.Header>
+                            </DataGridTextColumn>
+                            <DataGridTextColumn Binding="{Binding Version}" Width="Auto" IsReadOnly="True">
+                                <DataGridTextColumn.Header>
+                                    <TextBlock Text="{Binding AssembliesVersionText}" />
+                                </DataGridTextColumn.Header>
+                            </DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </TabItem>
