Check if The Unarchiver is usable.

--- a/RomRepoMgr/Views/SplashWindow.xaml
+++ b/RomRepoMgr/Views/SplashWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:svg="clr-namespace:Svg.Skia.Avalonia;assembly=Svg.Skia.Avalonia" mc:Ignorable="d" d:DesignWidth="450"
         d:DesignHeight="250" x:Class="RomRepoMgr.Views.SplashWindow" Icon="/Assets/avalonia-logo.ico"
         Title="ROM Repository Manager" SystemDecorations="BorderOnly" WindowStartupLocation="CenterScreen" Width="250"
-        Height="140">
+        Height="175">
     <Design.DataContext>
         <vm:SplashWindowViewModel />
     </Design.DataContext>
@@ -29,6 +29,24 @@
                 </Image.Source>
             </Image>
             <TextBlock Text="{Binding LoadingSettingsText}" VerticalAlignment="Center" />
+        </StackPanel>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+            <Image MaxWidth="24" MaxHeight="24" IsVisible="{Binding CheckingUnArOk}">
+                <Image.Source>
+                    <svg:SvgImage Source="/Assets/emblem-checked.svg" />
+                </Image.Source>
+            </Image>
+            <Image MaxWidth="24" MaxHeight="24" IsVisible="{Binding CheckingUnArError}">
+                <Image.Source>
+                    <svg:SvgImage Source="/Assets/emblem-error.svg" />
+                </Image.Source>
+            </Image>
+            <Image MaxWidth="24" MaxHeight="24" IsVisible="{Binding CheckingUnArUnknown}">
+                <Image.Source>
+                    <svg:SvgImage Source="/Assets/emblem-question.svg" />
+                </Image.Source>
+            </Image>
+            <TextBlock Text="{Binding CheckingUnArText}" VerticalAlignment="Center" />
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
             <Image MaxWidth="24" MaxHeight="24" IsVisible="{Binding LoadingDatabaseOk}">
