--- a/RomRepoMgr/Views/ImportRomFolder.xaml
+++ b/RomRepoMgr/Views/ImportRomFolder.xaml
@@ -43,17 +43,19 @@
             <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Stretch">
                 <TextBlock Text="{Binding PathLabel}" FontWeight="Bold" /> <TextBlock Text="{Binding FolderPath}" />
             </StackPanel>
-            <CheckBox Grid.Row="1" IsChecked="{Binding RemoveFilesChecked}" IsEnabled="{Binding IsReady}">
+            <CheckBox Grid.Row="1" IsChecked="{Binding RemoveFilesChecked}" IsEnabled="{Binding RemoveFilesEnabled}"
+                      IsVisible="{Binding IsReady}">
                 <CheckBox.Content>
-                    <TextBlock Text="{Binding RemoveFilesLabel}" IsEnabled="{Binding RemoveFilesEnabled}" />
+                    <TextBlock Text="{Binding RemoveFilesLabel}" />
                 </CheckBox.Content>
             </CheckBox>
-            <CheckBox Grid.Row="2" IsChecked="{Binding KnownOnlyChecked}">
+            <CheckBox Grid.Row="2" IsChecked="{Binding KnownOnlyChecked}" IsVisible="{Binding IsReady}">
                 <CheckBox.Content>
                     <TextBlock Text="{Binding KnownOnlyLabel}" />
                 </CheckBox.Content>
             </CheckBox>
-            <CheckBox Grid.Row="3" IsChecked="{Binding RecurseArchivesChecked}" IsEnabled="False">
+            <CheckBox Grid.Row="3" IsChecked="{Binding RecurseArchivesChecked}"
+                      IsEnabled="{Binding RecurseArchivesEnabled}" IsVisible="{Binding IsReady}">
                 <CheckBox.Content>
                     <TextBlock Text="{Binding RecurseArchivesLabel}" />
                 </CheckBox.Content>
@@ -82,7 +84,7 @@
                     </DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel Grid.Row="8" Orientation="Horizontal" IsVisible="{Binding IsReady}" HorizontalAlignment="Right">
+            <StackPanel Grid.Row="8" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right" VerticalAlignment="Center" IsEnabled="{Binding CanClose}"
                         Command="{Binding CloseCommand}">
                     <TextBlock Text="{Binding CloseLabel}" />
