--- a/RomRepoMgr/Views/MainWindow.xaml
+++ b/RomRepoMgr/Views/MainWindow.xaml
@@ -21,6 +21,7 @@
             </MenuItem>
             <MenuItem Header="ROM _sets"
                       IsEnabled="{Binding SelectedRomSet, Converter={x:Static ObjectConverters.IsNotNull}}">
+                <MenuItem Header="_Save DAT file" Command="{Binding ExportDatCommand}" /> <Separator />
                 <MenuItem Header="_Edit" Command="{Binding EditRomSetCommand}" /> <Separator />
                 <MenuItem Header="_Delete" Command="{Binding DeleteRomSetCommand}" /> <Separator />
             </MenuItem>
