Detect if FUSE is available before allowing to use it for VFS.

--- a/RomRepoMgr/Views/MainWindow.xaml
+++ b/RomRepoMgr/Views/MainWindow.xaml
@@ -16,7 +16,7 @@
                 <Separator />
                 <MenuItem Header="E_xit" IsVisible="{Binding !NativeMenuSupported}" Command="{Binding ExitCommand}" />
             </MenuItem>
-            <MenuItem Header="File_system">
+            <MenuItem Header="File_system" IsEnabled="{Binding IsVfsAvailable}">
                 <MenuItem Header="_Mount" Command="{Binding MountCommand}" /> <Separator />
             </MenuItem>
             <MenuItem Header="_ROMs">
