Allow to change sorting in main window rom sets table.

--- a/RomRepoMgr/Views/MainWindow.xaml
+++ b/RomRepoMgr/Views/MainWindow.xaml
@@ -52,7 +52,8 @@
                     <TextBlock Text="{Binding RomSetLabel}" />
                 </TabItem.Header>
                 <DataGrid Items="{Binding RomSets}" HorizontalScrollBarVisibility="Visible"
-                          SelectedItem="{Binding SelectedRomSet, Mode=TwoWay}">
+                          SelectedItem="{Binding SelectedRomSet, Mode=TwoWay}" CanUserSortColumns="True"
+                          CanUserResizeColumns="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Name}" Width="Auto" IsReadOnly="True">
                             <DataGridTextColumn.Header>
