--- a/RomRepoMgr/Views/About.xaml
+++ b/RomRepoMgr/Views/About.xaml
@@ -120,7 +120,7 @@
                     <TabItem.Header>
                         <TextBlock Text="{Binding LibrariesLabel}" />
                     </TabItem.Header>
-                    <DataGrid Items="{Binding Assemblies}"
+                    <DataGrid ItemsSource="{Binding Assemblies}"
                               HorizontalScrollBarVisibility="Visible">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding Name}"
