--- a/RomRepoMgr/Views/SplashWindow.xaml
+++ b/RomRepoMgr/Views/SplashWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:vm="clr-namespace:RomRepoMgr.ViewModels;assembly=RomRepoMgr"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:svg="clr-namespace:Svg.Skia.Avalonia;assembly=Svg.Skia.Avalonia"
+        xmlns:svg="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
         mc:Ignorable="d"
         d:DesignWidth="450"
         d:DesignHeight="250"
